List<StudentDto>> changed to StudentReportDto, StatReportDto added